[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/文字送りaループ用.mp3" type="AudioStream" id=1]
[ext_resource path="res://code/novel_2d.gd" type="Script" id=2]
[ext_resource path="res://data/Mplus2-Medium.tres" type="DynamicFont" id=3]

[node name="novel_2d" type="Node2D"]
script = ExtResource( 2 )

[node name="map" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 35.0
margin_top = 450.0
margin_right = 985.0
margin_bottom = 583.0
color = Color( 0, 0, 0, 0.392157 )

[node name="text" type="RichTextLabel" parent="ColorRect"]
margin_left = 19.0
margin_top = 13.0
margin_right = 919.0
margin_bottom = 120.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "テキスト"
text = "テキスト"

[node name="Tween" type="Tween" parent="ColorRect/text"]

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_top = -0.7
margin_top = 54.1
margin_right = 120.0
color = Color( 0, 0, 0, 0.392157 )

[node name="name" type="Label" parent="ColorRect/ColorRect"]
margin_left = 5.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
text = "名前"
align = 1

[node name="choices_posi" type="Position2D" parent="."]
position = Vector2( 981, 438 )

[node name="choices" type="VBoxContainer" parent="choices_posi"]

[node name="textSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[connection signal="tween_completed" from="ColorRect/text/Tween" to="." method="_on_Tween_tween_completed"]
